# house-controller2.0

./: .gitignore
client/: Makefile  gui.glade  gui.glade~  main.c  ui.c  ui.h  utillib.c  utillib.h
client/network/: client.c  client.h
client/utils/: utillib.c  utillib.h
docs/: README.md  desktop-app-design.drawio  gpio-event-loop.drawio  mobile-app-design.drawio
server/: getAuth.go  go.mod  readme-exp.txt  server.go  server.py
server/gpio/: __init__.py  gpio.py  gpio_test.py  requirements.txt  tests.py
server/templates/: index.html
server/templates/static/: main.js  styles.css
server/utils/: getAuth.go  go.mod  log.go
src/: requirements.txt
src/api/: gpio.py  main.py  requirements.txt  sockets.py
src/api/gpio/: gpio.py  requirements.txt
src/api/templates/static/: .styles.css.swp  styles.css
src/api/utils/: grammar.json  logger.py
src/app/: Makefile  autogen.sh
src/app/.deprecated/mobile-app/app/: app.json  package.json
src/app/.deprecated/mobile-app/app/pages/: Custom.jsx
src/app/.deprecated/mobile-app/app/pages/components/: AiAssistant.jsx  TextItems.jsx  TitleAiHeader.jsx
src/app/cli-util/network/: client.c
src/app/mobile-app/: OUT_OF_ORDER  whysougly.readme
src/app/mobile-app/app/: App.js  package.json
src/app/mobile-app/app/pages/: Custom.jsx  Home.jsx  LightSim.jsx  Presets.jsx
src/app/mobile-app/app/pages/cli-util/: client.js
src/app/mobile-app/app/pages/components/: AiAssistant.jsx  TextItems.jsx  Utility.jsx
src/app/pc-app/: CMakeLists.txt  Dockerfile  Makefile  autogen.sh  deps.sh  deps.txt  docker-compose.yml  gui.glade  main  main.c  require.sh
src/app/pc-app/cli-util/network/: client.h
src/app/pc-app/src/: app.h  gui.glade  main.c
src/app/pc-app/utils/: utilClient.c  utilError.c  utilExit.c  utilLight.c  utilStack.c  utillib.c  utillib.h  utilstack.c
src/app/src/: app.h  gui.glade  main.c
src/app/src/utils/: utilClient.c  utilStack.c  utillib.h
src/cli-util/network/: client.c
src/pc-app/: Makefile
